# metadata.swiss

./: .gitignore  .gitmodules  .prettierignore
.github/: copilot-instructions.md
.github/workflows/: docker-ods-consus-filter.yaml  docker-ods-consus-importing-csw.yaml  docker-ods-consus-importing-showcases.yaml  docker-ods-consus-patching.yaml  docker-ods-ui.yaml  meta-harvester-generator.yml  preview-trigger.yaml  previews-ods-ui.yaml  restart-ui.yaml  script-manual-trigger.yaml  subscriptions.yaml  test-ui.yaml  trigger-showcase-harvesting.yaml  ui-preview-status-content.yaml  ui-preview-status-default.yaml  ui-preview-status.yaml
.husky/: pre-commit
opendata.swiss/archimate/: README.md  odsn.archimate
opendata.swiss/docs/: keycloak-service-account-for-catalog-publisher.md
opendata.swiss/metadata/: .env.example  .gitignore  README.md  cluster.sh  docker-compose-consus.yml  docker-compose-custom.yaml  docker-compose-hub.yml  docker-compose.ci.yaml  docker-compose.yaml  metadata_transformation.md  out.xml  qlever-empty.env  reset.sh  test.sh
opendata.swiss/metadata/meta_harvester/: README.md  pyproject.toml
opendata.swiss/metadata/meta_harvester/meta_harvester/: __main__.py  api_clients.py  exceptions.py  organization_mapping.py  pipe-template-csw.yaml  pipe-template-rdf.yaml  pipe-template.yaml
opendata.swiss/metadata/meta_harvester/src/meta_harvester/: __main__.py  api_clients.py
opendata.swiss/system-delivery/: status-20260630.md  system-delivery.txt  uat-collaboration.md
opendata.swiss/ui/: .dockerignore  .editorconfig  .gitignore  Dockerfile  (+9 more)
(+1148 files in other folders)
