[project]
name = "meta-harvester"
version = "0.1.0"
description = ""
authors = [
    {name = "magdasalatka",email = "magdalena@datali.ch"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "requests (>=2.32.5,<3.0.0)"
]

[tool.poetry]
packages = [{include = "meta_harvester", from = "src"}]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
