[tool.poetry]
name = "meta-harvester"
version = "0.1.0"
description = ""
authors = ["Giacomo Citi <giacomo.citi@zazuko.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
requests = ">=2.32.5,<3.0.0"
dotenv = ">=0.9.9,<0.10.0"
pyyaml = "^6.0.3"
rdflib = "^7.4.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
